      "source-includes-file-in-files-excluded" tag where a Files-Excluded
      of "lib/*" would be triggered for "foolib/filename".
    + [CL] Correct another false positive in the
      "source-includes-file-in-files-excluded" tag where we would warn when
      the maintainer has removed upstream's debian/ directory and then we
      would trigger it on the maintainer's replacement files.

  * data/spelling/corrections:
    + [AB] Remove "publically". It's a seldom, but valid English word
      (c.f. https://en.wiktionary.org/wiki/publically) and causes false
      positives in the OpenSSL license.

  * t/scripts/spellintian.t:
    + [AB] Ensure that "publically" is not re-added as spelling correction
      in the future again to avoid hundreds of false positives in the
      OpenSSL license.

 -- Chris Lamb <lamby@debian.org>  Tue, 05 Dec 2017 15:27:44 +0000

lintian (2.5.61) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - epoch-change-without-comment
      - source-includes-file-in-files-excluded
      - unnecessary-team-upload

  * checks/changelog-file.{desc,pm}:
    + [CL] Warn about packages that modify the epoch and there's no comment
      about the change. This was motivated by the accidental bumping of the
      epoch in my python-django 2:2.0-1 upload.
  * checks/elpa.desc:
    + [CL] Correct reference to dh_elpa(1) manpage. Thanks to Paul Gevers
      for the report.  (Closes: #883356)
  * checks/fields.pm:
    + [CL] Apply patch from Dylan Aïssi to add R CRAN & Bioconductor
      repositories to the list of known insecure URIs.  (Closes: #883121)
  * checks/nmu.{desc,pm}:
    + [CL] Warn if a "Team upload" (ie. that string is present in the
      changelog) but the uploader is among the Maintainer/Uploaders.
      (Closes: #882954)
  * checks/python.desc:
    + [CL] Raise the severity of the
      "dependency-on-python-version-marked-for-end-of-life" and
      "python-foo-but-no-python3-foo" Python 2.x deprecation tags to