@@ -633,10 +633,8 @@ sub check_files_excluded {
         }
         for my $srcfile (@files) {
             next if $srcfile =~ m/^debian\//;
-            if ($srcfile =~ qr/^$wc_value/) {
-                tag 'source-includes-file-in-files-excluded',$srcfile;
-                last;
-            }
+            tag 'source-includes-file-in-files-excluded', $srcfile
+                if $srcfile =~ qr/^$wc_value/;
         }
     }
 
