@@ -1,4 +1,5 @@
 E: source-copyright-source-files-excluded source: source-includes-file-in-files-excluded .matches
 E: source-copyright-source-files-excluded source: source-includes-file-in-files-excluded exclude-dir-2/filename
 E: source-copyright-source-files-excluded source: source-includes-file-in-files-excluded exclude-dir/filename
+E: source-copyright-source-files-excluded source: source-includes-file-in-files-excluded exclude-dir/filename-2
 E: source-copyright-source-files-excluded source: source-includes-file-in-files-excluded exclude-this
